--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -35,7 +35,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 ### {{taxlink|Prunus ursina|species|noshow=1|ver=161009}} the {{vern|bear's plum}}
 ## {{taxlink|Prunus sect. Prunocerasus|section|noshow=1|ver=161009}} North American plums
 ### {{taxlink|Prunus americana|species|noshow=1|ver=161009}}, the {{vern|American plum}}
-### {{taxlink|Prunus angustifolia|species|noshow=1|ver=161009}}, the {{vern|Chickasaw plum}} or {{vern|sandhill plum}}
+### ''[[Prunus angustifolia]]'', the {{vern|Chickasaw plum}} or {{vern|sand plum}}
 ### {{taxlink|Prunus hortulana|species|noshow=1|ver=161009}}, the {{vern|hortulan plum}}
 ### {{taxlink|Prunus nigra|species|noshow=1|ver=161009}}, the {{vern|Canadian plum}} or {{vern|black plum}}
 ### {{taxlink|Prunus rivularis|species|noshow=1|ver=161009}}, the {{vern|creek plum}} or [[hog plum]]
@@ -62,7 +62,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{vern|Darling plum}} ({{taxlink|Reynosia septentrionalis|species|ver=181106}})
 {{rel-mid4}}
 * {{vern|East Indian plum}}
-* {{vern|Florida sand plum}} ({{taxlink|Prunus angustifolia|species|ver=181106}})
+* {{vern|Florida sand plum}} (''[[Prunus angustifolia]]'')
 * {{l|en|Guinea plum}} ({{taxlink|Parinarium excelsum|species|ver=181106}})
 * {{l|en|Indian plum}} ({{taxlink|Flacourtia|genus|ver=181106}} spp, esp {{taxlink|Flacourtia indica|species|ver=181106}}; {{taxlink|Osmaronia cerasiformis|species|ver=181106}})
 * {{vern|Jamaica plum}} ({{taxlink|Spondias mombin|species|ver=181106}})
@@ -91,8 +91,8 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{vern|burdekin plum}} ({{taxlink|Pleiogynium solandri|species|ver=181106}})
 * {{vern|carissa plum}} (''[[Carissa]]'' spp.)
 * {{l|en|cherry plum}} (''[[Prunus cerasifera]]'')
-* {{vern|Cherokee plum}} ({{taxlink|Prunus angustifolia|species|ver=181106}})
-* {{vern|Chickasaw plum}} ({{taxlink|Prunus angustifolia|species|ver=181106}})
+* {{vern|Cherokee plum}} (''[[Prunus angustifolia]]'')
+* {{vern|Chickasaw plum}} (''[[Prunus angustifolia]]'')
 * {{l|en|cocoa plum}}, {{vern|coco plum}}, {{l|en|cocoplum}} ({{taxlink|Chrysobalanus icaco|species|ver=181106}})
 * {{vern|common plum}} (''[[Prunus domestica]]'')
 * {{l|en|damascene plum}}, {{l|en|damask plum}}, {{l|en|damson plum}} ({{taxlink|Prunus insititia|species|ver=181106}})
@@ -107,7 +107,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{vern|green plum}} (''[[Prunus mume]]'')
 * {{vern|greengage plum}} ({{taxlink|Prunus italica|species|ver=181106}}, syn. {{taxlink|Prunus domestica subsp. italica|subspecies|ver=181106}})
 * {{vern|ground plum}} (''[[Astragalus]]'' spp., especially {{taxlink|Astragalus caryocarpus|species|ver=181106}})
-* [[hog plum]], {{vern|hogplum}} (''[[Spondias]]'' spp., {{taxlink|Metopium toxiferum|species|ver=181106}}, {{taxlink|Prunus angustifolia|species|ver=181106}}, {{taxlink|Ximenia americana|species|ver=181106}})
+* [[hog plum]], {{vern|hogplum}} (''[[Spondias]]'' spp., {{taxlink|Metopium toxiferum|species|ver=181106}}, ''[[Prunus angustifolia]]'', {{taxlink|Ximenia americana|species|ver=181106}})
 * {{vern|horse plum}} ({{taxlink|Prunus americana|species|ver=181106}}, {{taxlink|Prunus nigra|species|ver=181106}})
 * {{vern|leaf-curling plum aphid}}
 {{rel-mid4}}
@@ -182,13 +182,13 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|plumrock}}
 * {{l|en|plum-stone}}
 * {{l|en|pluot}}
-* {{vern|prairie plum}} ({{taxlink|Prunus angustifolia|species|ver=181106}})
+* {{vern|prairie plum}} (''[[Prunus angustifolia]]'')
 * {{vern|purple-leaved plum}} ({{taxlink|Prunus cerasifera subsp. pissardi|subspecies|ver=181106}})
 * {{vern|red plum}} ({{taxlink|Prunus americana|species|ver=181106}}, {{taxlink|Prunus nigra|species|ver=181106}})
 * {{vern|rough-skin plum}} ({{taxlink|Parinarium excelsum|species|ver=181106}})
 * {{vern|saffron plum}} ({{taxlink|Bumelia angustifolia|species|ver=181106}})
 * {{vern|sand plum}} ({{taxlink|Prunus angustifolia subsp. watsonii|subspecies|ver=181106}})
-* {{vern|sandhill plum}} ({{taxlink|Prunus angustifolia|species|ver=181106}})
+* {{vern|sandhill plum}} (''[[Prunus angustifolia]]'')
 * {{l|en|sapodilla plum}}
 * {{vern|seaside plum}} ({{taxlink|Ximenia americana|species|ver=181106}}, {{taxlink|Coccoloba uvifera|species|ver=181106}})
 * {{vern|sebesten plum}} ({{taxlink|Cordia myxa|species|ver=181106}})
