/* Japanese */ +formatting +pr <昴#54068678>

--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -73,6 +73,7 @@
 {{wp|Pleaides}}
 </div>
 {{ja-kanjitab|yomi=k|すばる}}
+
 Likely from {{inh|ja|ojp|sort=すばる|-}}, use of kanji in Japanese texts first appears in the ''{{w|ja:丹後国風土記|Tangō-no-kuni Fudoki}}'' (''c.'' mid-8th century), phonetic spelling first attested in the ''{{w|Wamyō Ruijushō}}'' (938 {{CE}}).
 
 By extension from {{m|ja|統ばる|tr=subaru||to [[bunch]] together; to [[unite]]|pos=intransitive}}, due to the way the [[star]]s in the [[constellation]] all ''[[cluster]]'' together.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref><ref name="DJR"/> Compare {{m|ja|統べる|tr=suberu||to [[command]]|pos=transitive}}.
@@ -89,6 +90,7 @@ By extension from {{m|ja|統ばる|tr=subaru||to [[bunch]] together; to [[unite]
 
 ===Etymology 2===
 {{ja-kanjitab|yomi=k|すまる}}
+
 Likely from {{inh|ja|ojp|-}}.
 
 Possibly an allusion from {{m|ja||tr=sumaru no tama||lit=[[cluster]] of [[pearl]]s}} referenced multiple times in the ''{{w|Kojiki}}'' (712 {{CE}}); probably the original form of ''Subaru'' above. {{rfv-etymology|ja}} Compare the development of {{m|ja|皇|tr=<i>sume-</i>/<i>sumera-</i> → <i>sube-</i>/<i>subera-</i>|pos=prefix of praise and respect to Shinto deities or an Emperor of Japan}}
@@ -104,13 +106,13 @@ Possibly an allusion from {{m|ja||tr=sumaru no tama||lit=[[cluster]] of [[pearl]
 {{wp|lang=ja|昴宿}}
 {{wp|Hairy Head}}
 </div>
-{{ja-kanjitab|yomi=k|ぼう}}
+{{ja-kanjitab|yomi=kanon|ぼう}}
 {{IPAchar|/bau/}} → {{IPAchar|/bɔː/}} → {{IPAchar|/boː/}}
 
 From {{bor|ja|ltc|sort=ほう|-}} {{ltc-l|昴}}.
 
 ====Pronunciation====
-{{ja-pron|y=ko|ぼう|acc=1|acc_ref=DJR}}
+{{ja-pron|yomi=kanon|ぼう|acc=1|acc_ref=DJR}}
 
 ====Proper noun====
 {{ja-pos|proper|ぼう|hhira=ばう}}
@@ -120,7 +122,11 @@ From {{bor|ja|ltc|sort=ほう|-}} {{ltc-l|昴}}.
 
 ===Etymology 4===
 {{ja-kanjitab|yomi=i|たかし}}
+
 Nominalization of classical adjective {{m|ja|高し|tr=takashi}}, modern {{m|ja|高い|tr=takai||[[high]]}}.
+
+====Pronunciation====
+{{ja-pron|yomi=i|たかし}}
 
 ====Proper noun====
 {{ja-pos|proper|たかし}}
@@ -129,7 +135,11 @@ Nominalization of classical adjective {{m|ja|高し|tr=takashi}}, modern {{m|ja|
 
 ===Etymology 5===
 {{ja-kanjitab|yomi=i|のぼる}}
+
 Nominalization of verb {{m|ja|[[上る]], [[登る]]|tr=noboru||to [[ascend]], [[rise]]}}.
+
+====Pronunciation====
+{{ja-pron|yomi=i|のぼる}}
 
 ====Proper noun====
 {{ja-pos|proper|のぼる}}
