--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -646,7 +646,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 #: {{ux|en|a '''cut''' for a railroad}}
 #* Knolles
 #*: This great '''cut''' or ditch Secostris {{...}} purposed to have made a great deal wider and deeper.
-# (specifically) An artificial [[navigation]] as distinguished from a [[navigable]] river
+## An artificial [[navigation]] as distinguished from a [[navigable]] river
 # A [[share]] or [[portion]].
 #: {{ux|en|The lawyer took a '''cut''' of the profits.}}
 # {{lb|en|cricket}} A [[batsman]]'s shot played with a [[swing]]ing motion of the bat, to hit the ball [[backward]] of [[point]].
@@ -656,8 +656,9 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 # {{lb|en|theatre}} A passage omitted or to be omitted from a play.
 #: {{ux|en|The [[director]] asked the [[cast]] to note down the following '''cuts'''.}}
 # {{lb|en|cinema}} A particular version or [[edit]] of a film.
-# The act or right of dividing a deck of playing cards.
+# {{lb|en|card games}} The act or right of dividing a deck of playing cards.
 #: {{ux|en|The player next to the dealer makes a '''cut''' by placing the bottom half on top.}}
+# {{lb|en|card games}} The card obtained by dividing the pack.
 # The manner or style a garment etc. is fashioned in.
 #: {{ux|en|I like the '''cut''' of that suit.}}
 #* Shakespeare
@@ -805,7 +806,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|act of deviding a deck of playing cards}}
+{{trans-top|act of dividing a deck of playing cards}}
 * Czech: {{t|cs|snímání}}
 * Danish: {{t|da|aftagning|c}}
 * Finnish: {{t+|fi|nosto}}
