/* Related terms */ via [[Template:etymtree/la/Francia]] <France#54074266>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -45,6 +45,17 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 ====Related terms====
 {{rel3|fr|Franco-|francophobe|Francophone|Frankland|French|Frenchman|New France|Tour de France}}
 
+====Descendants====
+{{top2}}
+* {{desc|bor=1|haw|Palani}}
+* {{desc|bor=1|kln|Frans}}
+* {{desc|bor=1|ki|Frans}}
+* {{desc|bor=1|luy|Frans}}
+* {{desc|bor=1|mer|Frans}}
+* {{desc|bor=1|st|France}}
+* {{desc|bor=1|sw|Ufaransa}}
+{{bottom}}
+
 ====Translations====
 {{trans-top|id=Q142|country}}
 * Acehnese: {{t|ace|Peurancih}}
