--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -305,7 +305,10 @@ From {{inh|frm|fro|France}}.
 # {{l|en|France}} {{gloss|country of the Europe}}
 
 ====Descendants====
-* French: {{l|fr|France}}
+* {{desc|fr|France}}
+* {{desc|bor=1|enm|Fraunce}}, {{l|enm|France}}
+** {{desc|en|France}} {{see desc}}
+** {{desc|sco|Fraunce}}
 
 [[Category:frm:Countries]]
 
