--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -277,11 +277,19 @@ From {{inh|fr|frm|France}}, from {{inh|fr|fro|France}}, from {{inh|fr|ML.|-}} or
 * {{l|fr|Marie-France}} (given name)
 
 ====Descendants====
-* → Chinese: {{zh-l|法蘭西}}
-* → English: {{l|en|France}}
-* → Japanese: {{ja-l|フランス||Furansu}}
-* → Korean: {{l|ko|^프랑스}}
-* → Rade: {{l|rad|Prăng}}
+* {{desc|ht|Frans}}
+* {{desc|gcf|Lafrans}} {{q|via {{l|fr|[[la]] [[France]]}}
+* {{desc|mfe|Lafrans}} {{q|via {{l|fr|[[la]] [[France]]}}
+* {{desc|bor=1|ja|フランス|tr=Furansu}}
+* {{desc|bor=1|km|បារាំង}}
+* {{desc|bor=1|ko|^프랑스}}
+* {{desc|bor=1|zh|-}}
+*: {{desc|cmn|法蘭西|tr=Fǎlánxī}}
+*: {{desc|yue|法蘭西|tr=faat3 laan4 sai1, faat3 laan4-1 sai1}}
+*: {{desc|cdo|tr=Huák-làng-să̤|法蘭西}}
+*: {{desc|nan|tr=Hoat-lân-se|法蘭西}}
+** {{desc|bor=1|mnc|ᡶᠠ ᠯᠠᠨ ᠰᡳ}}
+* {{desc|bor=1|rad|Prăng}}
 
 ===Anagrams===
 * {{l|fr|Céfran}}
