--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -369,6 +369,7 @@ From {{inh|fro|ML.|-}} or {{inh|fro|LL.|Francia}}, from {{m|la|Francī}}, the na
 ====Descendants====
 * {{desctree|frm|France}}
 * {{desc|nrf|France|alts=1}}
+* {{desc|pcd|France}}
 * {{desc|wa|France}}
 
 [[Category:fro:Countries]]
