t+ru:[[переваривать]] ([[WT:EDIT|Assisted]]) <stomach#54076928>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -418,6 +418,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 {{trans-mid}}
 * Italian: {{t+|it|digerire}}, {{t+|it|sopportare}}
 * Portuguese: {{t+|pt|aturar}}
+* Russian: {{t+|ru|переваривать|impf}}
 {{trans-bottom}}
 
 ===Anagrams===
