--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -418,8 +418,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 {{trans-mid}}
 * Italian: {{t+|it|digerire}}, {{t+|it|sopportare}}
 * Portuguese: {{t+|pt|aturar}}
-* Russian: {{t+|ru|переваривать|impf}}
-* Russian: {{t+|ru|переваривать|impf}}
+* Russian: {{t+|ru|перева́ривать|impf}}
 {{trans-bottom}}
 
 ===Anagrams===
