--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -365,6 +365,9 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 
 ==Interlingua==
 
+===Pronunciation===
+* {{IPA|ia|/israˈel}}
+
 ===Proper noun===
 {{ia-proper noun}}
 # {{lb|ia|all senses}} {{l|en|Israel}}
