--- a/en/圸/圸.12986.wikitext
+++ b/en/圸/圸.12986.wikitext
@@ -13,8 +13,15 @@
 
 ==Japanese==
 
+===Glyph origin===
+{{ja-etym-kokuji}}.
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土03}}
+
+# [[cliff]]
+# {{n-g|Only used in [[placename]]s in [[Yamagata]] Prefecture.}}
+[[File:Mamanoue, Nagai.jpg|thumb|280px|Mamanoue(圸の上), a placename in Yamagata Prefecture.]]
 
 ====Readings====
 {{ja-readings
