--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -278,7 +278,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 ===Noun===
 {{en-noun}}
 
-# Someone who is [[beautiful]]. Can be used as a term of address.
+# Someone who is beautiful. Can be used as a term of address.
 #: ''The man was faithful to his wife, ignoring the many blonde '''beautifuls''' who surrounded him wherever he went.''
 #:'' Hey, '''beautiful!''' ''
 
