--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -109,6 +109,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Sardinian: {{t|sc|costai}}, {{t|sc|costare}}, {{t|sc|costari}}
 * Scottish Gaelic: {{t|gd|cosg}}
 * Sicilian: {{t+|scn|custari}}
+* Slovak: {{t|sk|stáť|impf}}
 * Somali: {{t-needed|so}}
 * Spanish: {{t+|es|costar}}
 * Swahili: {{t+|sw|gharimu}}
