t+apc:[[إجا]] ([[WT:EDIT|Assisted]]) <come#54087994>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -170,6 +170,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Arabic: {{t|ar|جَاءَ}}, {{t+|ar|أَتَى}}
 *: Egyptian Arabic: {{t|arz|جا|tr=gā|sc=Arab}}, {{t|arz|جه|tr=geh|sc=Arab}}
 *: Hijazi Arabic: {{t|acw|جا|tr=jā|sc=Arab}}
+*: North Levantine Arabic: {{t|apc|إجا|tr=ʾijā}}
 *: Tunisian Arabic: {{t|aeb|جاء|tr=jāʾ|sc=Arab}}
 * Armenian: {{t+|hy|գալ}}
 * Aromanian: {{t|rup|vin}}, {{t|rup|yin}}
