/* Noun */ # {{lb|en|uncountable}} [[milk|Milk]] drawn from the [[breast]]. #* '''2010''', Barbara Tieken, ''Bull Vaulter: Alena of the Isle of Green'' (page 202) #*: The infant took '''suck''' in an instant, pulling strongly. <suck#54089934>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -12,11 +12,14 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 * {{hyphenation|suck|lang=en}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # An instance of drawing something into one's mouth by inhaling.
 #* '''2001''', D. Martin Doney, ''Prayer Capsule: A Book of Honesty'', page 261
 #*: Bammer agreed “Probably a good idea,” he agreed with a quick '''suck''' on his straw, “won't stop you from picking up any of these chicks, though.”
+# {{lb|en|uncountable}} [[milk|Milk]] drawn from the [[breast]].
+#* '''2010''', Barbara Tieken, ''Bull Vaulter: Alena of the Isle of Green'' (page 202)
+#*: The infant took '''suck''' in an instant, pulling strongly.
 # {{lb|en|Canada}} A [[weak]], [[self-pitying]] person; a person who refuses to [[go along]] with others, especially out of [[spite]]; a [[crybaby]] or [[sore loser]].
 #* '''1999''', Hiromi Goto, “Drift”, in ''Ms.'', v 9, n 3, p 82–6:
 #*: “Why're you bothering to take her anywhere? I can't stand traveling with her. You're such a '''suck''',” her sister said. Waved her smoke. “No fucking way I'm going.”
