--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -289,6 +289,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Bashkir: {{t|ba|эс}}, {{t|ba|ҡорһаҡ}}, {{t|ba|ҡарын}}
 * Belarusian: {{t|be|жыво́т|m|sc=Cyrl}}, {{t|be|чэ́рава|n|sc=Cyrl}}
 * Bengali: {{t|bn|পেট|sc=Beng}}
+* Brunei Malay: {{t|kxd|parut}}
 * Bulgarian: {{t+|bg|коре́м|m|sc=Cyrl}}, {{t+|bg|шкембе}}
 * Burmese: {{t+|my|ဗိုက်}}
 * Catalan: {{t+|ca|panxa|f}}
