--- a/en/昰/昰.16984.wikitext
+++ b/en/昰/昰.16984.wikitext
@@ -3,7 +3,11 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|
+{{Han char|rn=72|rad=日|as=05|sn=9|four=60101|canj=AMYM|ids=⿱日正}}
+
+====References====
+{{Han ref|kx=0494.010|dkj=13860|dj=0858.070|hdz=21497.040|uh=6630}}
+
 ----
 
 ==Chinese==
@@ -11,8 +15,10 @@
 ===Etymology 1===
 {{zh-see|是|v}}
 
-===Etymol
-{{}}
+===Etymology 2===
+{{zh-see|夏|v}}
+
+----
 
 ==Japanese==
 
