--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -370,6 +370,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Chinese:
 *: Mandarin: {{t+|cmn|射|tr=shè|sc=Hani}}, {{t+|cmn|射精|tr=shèjīng|sc=Hani}}, {{qualifier|slang}} {{t+|cmn|出水|tr=chūshuǐ|sc=Hani}}
 * Czech: {{t+|cs|udělat}} se
+* Danish: {{t+|da|komme}}, {{t|da|ejakulere}}
 * Dutch: {{t+|nl|klaarkomen}}
 * Esperanto: {{t|eo|ĉuri}}
 * Finnish: {{t+|fi|tulla}}, {{t|fi|saada orgasmi}}, {{t+|fi|laueta}}
