--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -263,7 +263,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Russian: {{t+|ru|Герма́ния|f}}
 * Rusyn: {{t|rue|Нїме́цько|n}}
 * Samogitian: {{t|sgs|Vuokītėjė}}
-* Sanskrit: {{t|sa|शर्मण्यदेश|m}}
+* Sanskrit: {{t|sa|शर्मण्यदेश|m}}, {{t+|sa|शार्मण्यदेश|m}}, {{t+|sa|शार्मण्य|m}}, {{t+|sa|शार्मण्यः|m}}
 * Saterland Frisian: {{t|stq|Düütsklound}}
 * Scottish Gaelic: {{t|gd|Gearmailt|f}}
 * Serbo-Croatian:
