--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -244,20 +244,20 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Occitan: {{t+|oc|Alemanha|f}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|Нѣмьци|p|sc=Cyrs}}
-*: Galgolitic: {{t|cu|Ⱀⱑⰿⱏⱌⰹ|p|sc=}}
+*: Galgolitic: {{t|cu|Ⱀⱑⰿⱏⱌⰹ|p|sc=Glag}}
 * Old English: {{t|ang|Germania|f}}
 * Old French: {{t|fro|Alemaigne|f}}
 * Old Occitan: {{t|pro|Alamagna}}
-* Oriya: {{t+|or|ଜର୍ମାନୀ|sc=Orya}}
+* Oriya: {{t+|or|ଜର୍ମାନୀ}}
 * Palauan: {{t|pau|Dois}}
-* Pashto: {{t|ps|آلمان|m|tr=ālmãn|sc=ps-Arab}}, {{t+|ps|المان|m|tr=almãn}}
+* Pashto: {{t|ps|آلمان|m|tr=ālmãn}}, {{t+|ps|المان|m|tr=almãn}}
 * Pennsylvania German: {{t|pdc|Deitschland|n}}
 * Persian: {{t+|fa|آلمان|tr=âlmân}}
 * Pitcairn-Norfolk: {{t|pih|Doichland}}
 * Plautdietsch: {{t+|pdt|Dietschlaund|n}}, {{t+|pdt|Dietschlaunt|n}}
 * Polish: {{t+|pl|Niemcy|f-p}}
 * Portuguese: {{t+|pt|Alemanha|f}}
-* Punjabi: {{t|pa|ਜਰਮਨੀ|sc=Guru}}
+* Punjabi: {{t|pa|ਜਰਮਨੀ}}
 * Quechua: {{t|qu|Alimanya}}
 * Romanian: {{t+|ro|Germania|f}}
 * Russian: {{t+|ru|Герма́ния|f}}
@@ -287,12 +287,12 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Tatar: {{t|tt|Алмания|sc=Cyrl}}
 * Telugu: {{t+|te|జర్మనీ}}
 * Thai: {{t+|th|เยอรมนี}}
-* Tibetan: {{t|bo|འཇར་མན|sc=Tibt}}
-* Tigrinya: {{t|ti|ጀርመን|sc=Ethi}}
+* Tibetan: {{t|bo|འཇར་མན}}
+* Tigrinya: {{t|ti|ጀርመን}}
 * Turkish: {{t+|tr|Almanya}}
 * Turkmen: {{t|tk|Germaniýa}}
 * Ukrainian: {{t+|uk|Німе́ччина|f}}
-* Urdu: {{t|ur|جرمنی|m|tr=jarmanī|sc=ur-Arab}}
+* Urdu: {{t|ur|جرمنی|m|tr=jarmanī}}
 * Uyghur: {{t|ug|گېرمانىيە|sc=ug-Arab}}
 * Uzbek: {{t+|uz|Olmoniya}}, {{t+|uz|Germaniya}}
 * Venetian: {{t|vec|Germania}}
@@ -310,7 +310,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * West Frisian: {{t+|fy|Dútslân|n}}
 * Wolof: {{t|wo|Almaañ}}
 * Xhosa: {{t|xh|iJamani|c5}}
-* Yiddish: {{t|yi|דײַטשלאַנד|n|sc=Hebr}}
+* Yiddish: {{t|yi|דײַטשלאַנד|n}}
 * Yoruba: {{t|yo|Jẹ́mánì}}
 * Zealandic: {{t|zea|Duutsland}}
 * Zhuang: {{t|za|Dwzgoz}}
