--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -80,8 +80,8 @@ From {{der|en|gmh|spalden}}, or {{der|en|non|spald}}.
 ====Noun====
 {{en-noun}}
 
-# {{lb|en|dialect|Northern England|Scotland}} A thin piece of wood or metal; a splinter.
-# {{lb|en|metalworking}} [[spelter]]
+# {{lb|en|dialect|Northern England|Scotland}} A thin piece of wood or metal; a [[splinter]].
+# {{lb|en|metalworking}} [[spelter|Spelter]].
 
 ====Verb====
 {{en-verb}}
