t+av:[[берцинаб]] ([[WT:EDIT|Assisted]]) <beautiful#54131372>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -70,6 +70,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Assamese: {{t|as|ধুনীয়া}} {{qualifier|common}}, {{t|as|ভাল লগা}}, {{t|as|সুন্দৰ}}
 * Asturian: {{t|ast|guapu|m}}, {{t|ast|guapa|f}}, {{t|ast|formosu|m}}, {{t|ast|formosa|f}}
 * Auslan: {{t-needed|asf}}
+* Avar: {{t|av|берцинаб}}
 * Azerbaijani: {{t+|az|qəşəng}}
 *: Cyrillic: {{t|az|гәшәнҝ|sc=Cyrl}}
 * Bashkir: {{t|ba|матур}}
