t+da:[[skub]] t+da:[[tryk]] t+da:[[anstrengelse]] ([[WT:EDIT|Assisted]]) <push#54157201>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -324,6 +324,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{trans-top|short, directed application of force; act of pushing}}
 * Bengali: {{t|bn|ধাক্কা|tr=dhakka}}
 * Catalan: {{t+|ca|empenta|f}}
+* Danish: {{t|da|skub|n}}
 * Dutch: {{t+|nl|duw|m}}
 * Finnish: {{t+|fi|työntö}}
 * German: {{t+|de|Schubs|m}}, {{t+|de|Stoß|m}}
@@ -339,6 +340,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{trans-bottom}}
 
 {{trans-top|act of tensing the muscles of the abdomen in order to expel its contents}}
+* Danish: {{t|da|tryk|n}}
 * Finnish: {{t+|fi|ponnistus}}, {{t+|fi|työntö}}
 * German: {{t+|de|Druck|m}}
 {{trans-mid}}
@@ -347,6 +349,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 
 {{trans-top|great effort (to do something)}}
 * Catalan: {{t+|ca|empenta|f}}
+* Danish: {{t|da|anstrengelse|c}}
 * Finnish: {{t+|fi|ponnistus}}
 {{trans-mid}}
 * Spanish: {{t+|es|empujón|m}}
