--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -4,6 +4,7 @@
 
 ===Pronunciation===
 * {{enPR|po͝ol}}, {{IPA|/pʊl/|lang=en}}
+* {{a|US}} {{IPA|[pʰʊːɫ]|lang=en}}
 * {{audio|en-us-pull.ogg|Audio (US)|lang=en}}
 * {{audio|en-au-pull.ogg|Audio (AU)|lang=en}}
 * {{hyphenation|pull|lang=en}}
