--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -7,9 +7,9 @@
 From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}, from {{der|en|la|olīva||olive}}, from {{der|en|ett|𐌄𐌋𐌄𐌉𐌅𐌀|tr=eleiva|sc=Ital}} or Proto-Greek {{m|grc|*ἐλαίϝα}}, ultimately from {{der|en|ine-pro|*loiwom}} (compare {{cog|cu|лои||tallow}}, {{cog|xcl|եւղ||oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
 
 ===Pronunciation===
-* {{enPR|ŏl'ĭv}}, {{IPA|/ˈɒlɪv/|lang=en}}
+* {{a|UK}} {{enPR|ŏl'ĭv}}, {{IPA|/ˈɒlɪv/|lang=en}}
 * {{audio|En-uk-olive.ogg|Audio (UK)|lang=en}}
-* {{enPR|äl'ĭv}}, {{IPA|/ˈɑlɪv/|lang=en}}
+* {{a|US}} {{enPR|äl'ĭv}}, {{IPA|/ˈɑlɪv/|[ˈʔɑːɫlɨv̥]|lang=en}}
 * {{audio|En-us-olive.ogg|Audio (US)|lang=en}}
 
 ===Noun===
