--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -2,7 +2,7 @@
 {{PIE root|en|keh₂p}}
 ===Pronunciation===
 * {{IPA|/kɔ(ː)t/|lang=en}}
-** {{a|RP}} {{IPA|[kʰɔːt]|lang=en}}
+**{{a|RP}} {{IPA|[kʰoːt]|lang=en|}}
 ** {{audio|en-uk-caught.ogg|Audio (UK)|lang=en}}
 ** {{a|Australia|New Zealand}} {{IPA|[k̠ʰoːt]|lang=en}}
 ** {{audio|en-au-caught.ogg|Audio (Australia)|lang=en}}
