--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -7,13 +7,13 @@ From {{inh|en|enm|cacchen}}, from {{der|en|xno|cachier}}, from {{der|en|LL.|capt
 The verb became irregular, possibly under the influence of the semantically similar {{m|en|latch}} (from {{cog|ang|læċċan}}) whose past tense was {{m|enm|lahte}}, {{m|enm|lauhte}}, {{m|en|laught}} ({{cog|ang|læhte}}) until becoming regularised in Modern English.
 
 ===Pronunciation===
-* {{enPR|kăch|kĕch}}, {{IPA|/kæt͡ʃ/|/kɛt͡ʃ/|lang=en}}
-* {{audio|en-us-catch.ogg|Audio (US)|lang=en}}
-* {{audio|en-au-catch.ogg|Audio (AU)|lang=en}}
-* {{audio|LL-Q1860 (eng)-Nattes à chat-catch.wav|Audio|lang=en}}
+* {{enPR|kăch}}, {{IPA|/kæt͡ʃ/|lang=en}}
+** {{audio|LL-Q1860 (eng)-Nattes à chat-catch.wav|Audio|lang=en}}
+** {{audio|en-au-catch.ogg|Audio (AU)|lang=en}}
+* {{a|US|also}} {{enPR|kĕch}}, {{IPA|/kɛt͡ʃ/|lang=en}}
+** {{audio|en-us-catch.ogg|Audio (US)|lang=en}}
+**Noah Webster's ''American Dictionary'' (1828) regards {{IPAchar|/kɛtʃ/}} as the "popular or common pronunciation."<ref>[http://edl.byu.edu/webster/c/47 Noah Webster, An American Dictionary of the English Language, 1828. byu.edu].</ref> It is labeled "not infreq[uent]" in Kenyon & Knott (1949).<ref>[https://archive.org/stream/pronouncingdicti00unse#page/72/mode/2up Kenyon & Knott, ''A Pronouncing Dictionary of American English''. archive.org]</ref>
 * {{rhymes|ætʃ|lang=en}}, {{rhymes|ɛtʃ|lang=en}}
-
-Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular or common pronunciation."<ref>[http://edl.byu.edu/webster/c/47 Noah Webster, An American Dictionary of the English Language, 1828. byu.edu].</ref> It is labeled "not infreq[uent]" in Kenyon & Knott (1949).<ref>[https://archive.org/stream/pronouncingdicti00unse#page/72/mode/2up Kenyon & Knott, ''A Pronouncing Dictionary of American English''. archive.org]</ref>
 
 ===Noun===
 {{en-noun|~|es}}
