--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -143,6 +143,7 @@ The noun is from {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|en
 * Romansch: {{t|rm|lutgar}}
 * Russian: {{t+|ru|дра́ться|impf}}, {{t+|ru|би́ться|impf}}, {{t+|ru|боро́ться|impf}} ''wrestle'', {{t+|ru|сража́ться|impf}} ''in a duel or battle'', {{t+|ru|воева́ть|impf|sc=Cyrl}}
 * Sanskrit: {{t-needed|sa}}
+* Scots: {{t|sco|fecht}}
 * Scottish Gaelic: {{t|gd|cog}}, {{t|gd|sabaid}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|борити|impf|alt=борити се}}
