--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -106,7 +106,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Kamba: {{t|kam|Nyuziland}}
 * Kannada: {{t+|kn|ನ್ಯೂ ಜೀಲ್ಯಾಂಡ್|sc=Knda}}
 * Kashubian: {{t|csb|Nowô Zelandzkô|n}}
-* Kazakh: {{t|kk|Жаңа-Зеландия|sc=Cyrl}}
+* Kazakh: {{t|kk|Жаңа Зеландия|sc=Cyrl}}
 * Khmer: {{t|km|ញូហ្សេលែនដ៍}}
 * Kikuyu: {{t|ki|Nyuziland}}
 * Korean: {{t|ko|^뉴질랜드}}
