/* Translations */ Added Latin translation of this word. <stomach#54263313>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -329,6 +329,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Kyrgyz: {{t+|ky|карын|sc=Cyrl}}, {{t+|ky|курсак}}, {{t+|ky|ич}}
 * Latgalian: {{t|ltg|vādars|m}}
 {{trans-mid}}
+* Latin: {{t|la|alvus|m}}, {{t|la|venter|m}}
 * Latvian: {{t|lv|vēders|m}}
 * Lithuanian: {{t|lt|pilvas|m}}
 * Low German: {{t+|nds|Buuk|m}}
