--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -22,7 +22,7 @@
 {{Han compound|咸|心|c1=p|c2=s|t2=heart|ls=psc}}.
 
 ===Etymology===
-Etymology not clear ({{Schuessler, 2007}}).
+Etymology not clear ({{zh-ref|Schuessler, 2007}}).
 
 ===Pronunciation===
 {{zh-pron
