t+ryu:[[フランシ]] ([[WT:EDIT|Assisted]]) <France#54271431>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -170,6 +170,7 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 * Norwegian: {{t+|no|Frankrike}}
 * Novial: {{t|nov|Fransia}}
 * Occitan: {{t+|oc|França|f}}
+* Okinawan: {{t|ryu|フランシ|tr=Furanshi}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|Франкїꙗ|f|sc=Cyrs}}
 * Old English: {{t|ang|Francland|n}}, {{t|ang|Francena rīċe|n}}, {{t|ang|Francrīċe|n}}
