t+tl:[[sumuka]] ([[WT:EDIT|Assisted]]) <vomit#54272602>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -137,6 +137,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Sundanese: {{t|su|luga}}, {{t|su|utah}}
 * Swahili: {{t+|sw|tapika|alt=-tapika}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}, {{t|sv|kasta upp}}
+* Tagalog: {{t|tl|sumuka}}
 * Tajik: {{t|tg|қай кардан}}
 * Tamil: {{t+|ta|குமட்டு}}, {{t+|ta|உவட்டு}}, {{t|ta|உவாந்தி}}, {{t+|ta|வாந்தி}}
 * Thai: {{t+|th|อาเจียน}}, {{t+|th|อ้วก}}
