--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -7,6 +7,7 @@
 * {{a|US}} {{IPA|/fɔt/|lang=en}}
 * {{a|cot-caught}} {{IPA|/fɑt/|lang=en}}
 * {{audio|en-us-fought.ogg|Audio (US)|lang=en}}
+* {{rhymes|en|ɔː(ɹ)t}}
 
 ===Verb===
 {{head|en|verb form}}
