t+sv:[[dunder]] ([[WT:EDIT|Assisted]]) <thunder#54277512>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -192,7 +192,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Slovene: {{t+|sl|grom|m}}, {{t|sl|grmenje|n}}
 * Spanish: {{t+|es|trueno|m}}
 * Swahili: {{qualifier|nc 9/10}} {{t+check|sw|radi}}
-* Swedish: {{t+|sv|åska|c}}, {{t|sv|([[åsk]]) [[smäll]]|c}}
+* Swedish: {{t+|sv|åska|c}}, {{t|sv|([[åsk]]) [[smäll]]|c}}, {{t+|sv|dunder|c}}
 * Tagalog: {{t|tl|kulog}}
 * Tajik: {{t|tg|тундар}}, {{t+|tg|раъд}}
 * Tamil: {{t+|ta|இடி}}
