--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -2,15 +2,15 @@
 {{wikipedia}}
 
 ===Alternative forms===
-* {{l|en|substaunce}} {{qualifier|archaic}}
+* {{alter|en|substaunce||archaic}}
 
 ===Etymology===
-From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia||substance, essence}}, from {{m|la|substāns}}, present active participle of {{m|la|substō||exist; literally, stand under}}, from {{m|la|sub}} + {{m|la|stō||stand}}.
+From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}}, from {{m|la|substāns}}, present active participle of {{m|la|substō|t=exist|lit=stand under}}, from {{m|la|sub}} + {{m|la|stō|t=stand}}.
 
 ===Pronunciation===
-* {{a|US}} {{IPA|/ˈsʌbstəns/|[ˈsʌbstənts]|lang=en}}
-* {{audio|en-us-substance.ogg|Audio (US)|lang=en}}
-* {{audio|LL-Q1860 (eng)-Nattes à chat-substance.wav|Audio|lang=en}}
+* {{a|US}} {{IPA|en|/ˈsʌbstəns/|[ˈsʌbstənts]}}
+* {{audio|en|en-us-substance.ogg|Audio (US)}}
+* {{audio|en|LL-Q1860 (eng)-Nattes à chat-substance.wav|Audio}}
 
 ===Noun===
 {{en-noun|~}}
@@ -21,6 +21,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 #* {{quote-journal|lang=en|date=2013-07-20|volume=408|issue=8845|magazine={{w|The Economist}}
 |title=[http://www.economist.com/news/science-and-technology/21581981-what-pollution-some-opportunity-others-welcome-plastisphere Welcome to the plastisphere]
 |passage=Plastics are energy-rich '''substances''', which is why many of them burn so readily. Any organism that could unlock and use that energy would do well in the Anthropocene. Terrestrial bacteria and fungi which can manage this trick are already familiar to experts in the field.}}
+#: {{syn|en|matter|stuff}}
 # The [[essential]] part of anything; the most vital part.
 #* {{rfdate||and other bibliographic particulars}} {{w|John Dryden}}
 #*: Heroic virtue did his actions guide, / And he the '''substance''', not the appearance, chose.
@@ -28,6 +29,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 #*: This edition is the same in '''substance''' with the Latin.
 #* {{rfdate||and other bibliographic particulars}} {{w|Edmund Burke}}
 #*: It is insolent in words, in manner; but in '''substance''' it is not only insulting, but alarming.
+#: {{syn|en|crux|gist}}
 # Substantiality; solidity; firmness.
 #: {{ux|en|Some textile fabrics have little '''substance'''.}}
 # Material possessions; estate; property; resources.
@@ -41,17 +43,19 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 # A form of matter that has constant chemical composition and characteristic properties.
 # [[drug|Drugs]] {{gloss|illegal narcotics}}
 #: {{ux|en|'''substance''' abuse}}
+#: {{syn|en|dope|gear}}
 # {{lb|en|theology}} [[hypostasis|Hypostasis]].
 
 ====Synonyms====
-* {{sense|physical matter}} {{l|en|matter}}, {{l|en|stuff}}; See also [[Thesaurus:substance]]
-* {{sense|essential part of anything}} {{l|en|crux}}, {{l|en|gist}}; See also [[Thesaurus:gist]]
-* {{sense|drugs}} {{l|en|dope}}, {{l|en|gear}}; See also [[Thesaurus:recreational drug]]
+* {{sense|physical matter}} See also [[Thesaurus:substance]]
+* {{sense|essential part of anything}} See also [[Thesaurus:gist]]
+* {{sense|drugs}} See also [[Thesaurus:recreational drug]]
 
 ====Related terms====
-* {{l|en|subsist}}
-* {{l|en|substantial}}
-* {{l|en|substantive}}
+{{rel3|en
+|subsist
+|substantial
+|substantive}}
 
 ====Translations====
 {{trans-top|matter}}
@@ -59,7 +63,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Asturian: {{t|ast|sustancia|f}}
 * Catalan: {{t+|ca|substància|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|物質|sc=Hani}}, {{t+|cmn|物质|tr=wùzhì|sc=Hani}}
+*: Mandarin: {{t+|cmn|物質}}, {{t+|cmn|物质|tr=wùzhì}}
 * Czech: {{t+|cs|látka|f}}
 * Danish: {{t|da|substans}}, {{t+|da|masse}}
 * Dutch: {{t+|nl|substantie|f}}
@@ -71,13 +75,13 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Greek: {{t+|el|ουσία|f}}
 *: Ancient: {{t|grc|οὐσία|f}}, {{t|grc|ὑπόστασις|f}}
 * Hebrew: {{t+|he|חומר|m|tr=khómer}}
-* Hindi: {{t+|hi|पदार्थ|m|tr=padārth}}
+* Hindi: {{t+|hi|पदार्थ|m}}|tr=padārth
 * Hungarian: {{t+|hu|anyag}}, {{t+|hu|tartalom}}
 {{trans-mid}}
 * Irish: {{t|ga|mianach|m}}, {{t|ga|damhna|m}}
 * Italian: {{t+|it|sostanza|f}}
 * Japanese: {{t+|ja|物質|tr=busshitsu}}
-* Khmer: {{t+|km|វត្ថុ|tr=voattʰo’|sc=Khmr}}
+* Khmer: {{t+|km|វត្ថុ|tr=voattʰo’}}
 * Korean: {{t+|ko|물질}}
 * Latin: {{t|la|substantia|f}}, {{t+|la|materia|f}}
 * Latvian: {{t|lv|viela|f}}
@@ -89,7 +93,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Russian: {{t+|ru|вещество́|n}}, {{t+|ru|субста́нция|f}}, {{t+|ru|мате́рия|f}}
 * Spanish: {{t+|es|sustancia|f}}
 * Swedish: {{t+|sv|ämne|n}}, {{t+|sv|substans|c}}
-* Telugu: {{t+|te|పదార్థము|tr=padaarthamu}}
+* Telugu: {{t+|te|పదార్థము}}|tr=padaarthamu
 * Thai: {{t+|th|สสาร}}
 * Turkish: {{t+|tr|madde}}
 {{trans-bottom}}
@@ -99,7 +103,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Asturian: {{t|ast|sustancia|f}}
 * Catalan: {{t+|ca|substància|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|實質|sc=Hani}}, {{t+|cmn|实质|tr=shízhì|sc=Hani}}
+*: Mandarin: {{t+|cmn|實質}}, {{t+|cmn|实质|tr=shízhì}}
 * Czech: {{t+|cs|podstata}}
 * Danish: {{t|da|substans}}, {{t|da|hovedindhold}}
 * Finnish: {{t+|fi|ydin}}, {{t+|fi|substanssi}}, {{t+|fi|olemus}}
@@ -135,7 +139,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 
 {{trans-top|material possessions}}
 * Chinese:
-*: Mandarin: {{t+|cmn|资产|sc=Hani}}
+*: Mandarin: {{t+|cmn|资产}}
 * Danish: {{t|da|formue}}
 * Finnish: {{t+|fi|vara|alt=varat|p}}, {{t+|fi|varallisuus}}
 * French: {{t+|fr|biens|m-p}}
@@ -165,7 +169,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 
 {{trans-top|drugs}}
 * Chinese:
-*: Mandarin: {{t+|cmn|毒品|sc=Hani}}
+*: Mandarin: {{t+|cmn|毒品}}
 * Finnish: {{t+|fi|aine|alt=aineet|p}}
 * German: {{t+|de|Substanz|f}}
 * Greek: {{t+|el|ουσίες|f-p}}
@@ -183,18 +187,15 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 
 {{trans-see|theology: hypostasis|hypostasis}}
 
-{{checktrans-top}}
+{{trans-top}}
 * Albanian: {{t+check|sq|lëndë}}
-* {{ttbc|ar}}: {{l|ar|مادَة}} (mádda) {{g|f}}
 * Azerbaijani: {{t+check|az|maddə}}
-* {{ttbc|bg}}: [[вещество]] (vešestvo) {{g|n}}
 * Dutch: {{t+check|nl|substantie}}
 * Esperanto: {{t-check|eo|substanco}}
 * Estonian: {{t+check|et|aine}}
 * Indonesian: {{t+check|id|bahan}}
 * Interlingua: {{t-check|ia|substantia}}
 * Italian: {{t+check|it|sostanza|f}}
-* {{ttbc|ko}}: [[실체]] (silche), [[물질]] (muljil)
 {{trans-mid}}
 * Lithuanian: {{t+check|lt|turinys}}
 * Middle English: {{t-check|enm|substaunce}}
@@ -203,10 +204,9 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Slovak: {{t+check|sk|hmota|f}}
 * Tibetan: {{t-check|bo|རྒྱུ}}
 * Turkish: {{t+check|tr|madde}}
-* {{ttbc|ug}}: (madda)
+* Uyghur: {{t-check|ug|tr=madda}}
 * Vietnamese: {{t+check|vi|chất}}
 * Welsh: {{t+check|cy|sylwedd}}
-* {{ttbc|yi}}: [[מאַטעריע]] (materye)
 {{trans-bottom}}
 
 ===Verb===
@@ -228,12 +228,12 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 ==French==
 
 ===Etymology===
-Borrowed from {{bor|fr|la|substantia||substance, essence}}, from {{m|la|substāns}}, present active participle of {{m|la|substō||exist; literally, stand under}}, from {{m|la|sub}} + {{m|la|stō||stand}}.
+Borrowed from {{bor|fr|la|substantia|t=substance, essence}}, from {{m|la|substāns}}, present active participle of {{m|la|substō|t=exist|lit=stand under}}, from {{m|la|sub}} + {{m|la|stō|t=stand}}.
 
 ===Pronunciation===
 * {{fr-IPA}}
-* {{audio|Fr-substance.ogg|audio|lang=fr}}
-* {{rhymes|ɑ̃s|lang=fr}}
+* {{audio|fr|Fr-substance.ogg|audio}}
+* {{rhymes|fr|ɑ̃s}}
 
 ===Noun===
 {{fr-noun|f}}
@@ -241,26 +241,26 @@ Borrowed from {{bor|fr|la|substantia||substance, essence}}, from {{m|la|substān
 # [[#Noun|substance]]
 
 ====Derived terms====
-* {{l|fr|substantiation}}
-* {{l|fr|substantiel}}
-* {{l|fr|substantif}}
+{{der3|fr
+|substantiation
+|substantiel
+|substantif}}
 
 ===Further reading===
 * {{R:TLFi}}
 
 ===Anagrams===
-* {{l|fr|cubassent}}
+* {{anagrams|fr|cubassent}}
 
 ----
 
 ==Old French==
 
 ===Alternative forms===
-* {{l|fro|sostance}}
-* {{l|fro|sustance}}
+* {{alter|fro|sostance|sustance}}
 
 ===Etymology===
-Borrowed from {{etyl|la|fro}} {{m|la|substantia}}.
+Borrowed from {{bor|fro|la|substantia}}.
 
 ===Noun===
 {{fro-noun|f}}
@@ -272,5 +272,7 @@ Borrowed from {{etyl|la|fro}} {{m|la|substantia}}.
 * {{l|fro|substantiel}}
 
 ====Descendants====
-* English: {{l|en|substance}} {{qualifier|borrowed}}
-* French: {{l|fr|substance}}
+{{top2}}
+* {{desc|en|substance|bor=1}}
+* {{desc|fr|substance}}
+{{bottom}}
