/* Norwegian Bokmål */ derived terms <felt#54358656>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -307,6 +307,7 @@ From {{der|nb|gml|velt}}
 * {{l|nb|feltarbeid}} {{q|from English}}
 * {{l|nb|feltprest}}
 * {{l|nb|feltrasjon}}
+* {{l|nb|felttog}}
 
 ===Etymology 3===
 ====Verb====
