--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -187,6 +187,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Bulgarian: {{t+|bg|и́двам|impf}}, {{t|bg|до́йда|pf}}
 * Burmese: {{t+|my|လာ|sc=Mymr}}
 * Catalan: {{t+|ca|venir}}
+* Chagatai: {{t|chg|کلادو|tr=kelādū}}
 * Chechen: {{t-needed|ce}}
 * Chinese:
 *: Cantonese: {{t+|yue|嚟|tr=lei4; lai4|sc=Hani}}
@@ -239,8 +240,8 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Latin: {{t+|la|venio}}, {{t+|la|progredior}}
 * Latvian: {{t+|lv|nākt}}
 * Lithuanian: {{t+|lt|ateiti}}
-{{trans-mid}}
 * Lü: {{t|khb|ᦙᦱ}}
+{{trans-mid}}
 * Macedonian: {{t|mk|доаѓа|impf}}, {{t|mk|дојде|pf}}
 * Malay: {{t+|ms|datang}}, {{t|ms|mari}}
 * Maltese: {{t|mt|ġie}}
