--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -56,10 +56,28 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
 
-# [[pitfall]]
-
 ====Readings====
-* {{ja-readings|on=[[かん]] (kan)|kun=[[あな]] (ana)}}
+{{ja-readings
+|goon=こん
+|kanon=かん
+|kun=あな-
+}}
+
+===Etymology===
+{{ja-kanjitab|かん|yomi=on}}
+From {{der|ja|ltc|sort=かん|-}} {{ltc-l|坎}}.
+
+===Pronunciation===
+{{ja-pron|かん|acc=1|acc_ref=DJR|y=on}}
+
+===Affix===
+{{ja-pos|affix|かん}}
+
+# [[pit]]; [[hole]]; [[pitfall]]
+# one of the eight trigrams: [[☵]]
+
+===References===
+<references/>
 
 ----
 
