--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -59,9 +59,7 @@ Colloquial form of the departing-tone variant of {{ltc-l|作|to do|id=2}}, to di
 # {{lb|zh|euphemism}} to [[make love]]
 
 ====Synonyms====
-* {{zh-l|作}}
-* {{zh-l|辦}}
-* {{zh-l|幹}}
+* {{sense|to do}} {{zh-l|辦}}, {{zh-l|幹}}, {{zh-l|搞}}, {{zh-l|整治}}, {{zh-l|作}}
 
 ===Compounds===
 {{zh-der|做愛|做伴|做操|做東|做法|做工|做鬼|做鬼臉|做活|做客|做禮拜|做買賣|做滿月|做媒|做夢|做圈套|做人|做聲|做生日|做生意|做事|做手腳|做壽|做文章|做戲|做秀|做學問|做賊心虛|做針線|做主|做作|不做聲|不做肉|伏低做小|作做|便做|便做到|便做道|倣做|假戲真做|做一路|做七|做三日|做下|做下來|做不是|做人家|做人情|做人處事|做保|做倒包|做光|做公的|做出事來|做出場|做分上|做到|做功果|做功課|做嘴臉|做大|做大頭|做好事|做好做惡|做好做歉|做好做歹|做好看|做孝|做官|做小|做小伏低|做尾巴|做屏風|做工夫|做幌子|做廣告|做引線|做張做勢|做張做智|做張做致|做後門|做得|做得了|做我不著|做手|做掉|做排場|做春夢|做朝|做東道|做格|做案|做樁|做歉做好|做死|做法子|做派|做牌|做牛做馬|做牽頭|做甚|做生|做生活|做百日|做的個|做眉眼|做眼|做眼色|做神做鬼|做空頭|做節|做線|做翻|做胚|做腔|做腔作勢|做腳|做臉|做臉兒|做莊|做菜|做處|做親|做道場|做道理|做道路|做門戶|做面子|做面皮|做頭|做飯|光說不做|兩頭做大|叫做|啞子做夢|喬做胡為|大做文章|好人難做|好吃懶做|小題大做|巴家做活|幹家做活|愛親做親|把做|捉班做勢|推聾做啞|敢做敢當|更做|更做到|更做道|服低做小|歹做出|毫不做作|沒做擺佈|沒做道理|潑做|當做|白做|看事做事|緊差緊做|胡做喬為|蠻做|訂做|說做就做|說到做到|貪吃懶做|身做身當|重新做人|麻做一團|做伙:chò-hóe|做陣:chò-tīn}}
