--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -33,46 +33,44 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * [[roll]], [[clap]], [[peal]] are some of the words used to count thunder e.g. ''A series of rolls/claps/peals of thunder were heard''
 
 ====Derived terms====
-{{der-top3}}
-* {{l|en|black thunder}}
-* {{l|en|blood and thunder}}
-* {{l|en|face like thunder}}
-* {{l|en|steal someone's thunder}}
-* {{l|en|thunder and lightning}}<!--figurative sense-->
-* {{l|en|thunder cross}}
-* {{l|en|thunder god}}
-* {{l|en|thunder god vine}}
-* {{l|en|thunder mug}}
-* {{l|en|thunder lizard}}
-* {{l|en|thunder pot}}
-* {{l|en|thunder rod}}
-* {{l|en|thunder sleet}}
-* {{l|en|thunder snake}}
-* {{l|en|thunder thighs}}
-* {{l|en|thunder tube}}
-* {{l|en|thunderation}}
-* {{l|en|thunderbird}}
-* {{l|en|thunderbolt}}
-{{der-mid3}}
-* {{l|en|thunderboomer}}
-* {{l|en|thunderbox}}
-* {{l|en|thunderclap}}
-* {{l|en|thundercloud}}
-* {{l|en|thunderfish}}
-{{der-mid3}}
-* {{l|en|thunderhead}}
-* {{l|en|thunderless}}
-* {{l|en|thunderous}}
-* {{l|en|thunderpeal}}
-* {{l|en|thundershower}}
-* {{l|en|thundersquall}}
-* {{l|en|thunderstick}}
-* {{l|en|thunderstrike}}
-* {{l|en|thunderstruck}}
-* {{l|en|thunderstone}}
-* {{l|en|thunderstorm}}
-* {{l|en|thundery}}
-{{der-bottom}}
+{{der4|en
+|{{l|en|black thunder}}
+|{{l|en|blood and thunder}}
+|{{l|en|face like thunder}}
+|{{l|en|steal someone's thunder}}
+|{{l|en|thunder and lightning}}<!--figurative sense-->
+|{{l|en|thunder cross}}
+|{{l|en|thunder god}}
+|{{l|en|thunder god vine}}
+|{{l|en|thunder mug}}
+|{{l|en|thunder lizard}}
+|{{l|en|thunder pot}}
+|{{l|en|thunder rod}}
+|{{l|en|thunder sleet}}
+|{{l|en|thunder snake}}
+|{{l|en|thunder thighs}}
+|{{l|en|thunder tube}}
+|{{l|en|thunderation}}
+|{{l|en|thunderbird}}
+|{{l|en|thunderbolt}}
+|{{l|en|thunderboomer}}
+|{{l|en|thunderbox}}
+|{{l|en|thunderclap}}
+|{{l|en|thundercloud}}
+|{{l|en|thunderfish}}
+|{{l|en|thunderhead}}
+|{{l|en|thunderless}}
+|{{l|en|thunderous}}
+|{{l|en|thunderpeal}}
+|{{l|en|thundershower}}
+|{{l|en|thundersquall}}
+|{{l|en|thunderstick}}
+|{{l|en|thunderstrike}}
+|{{l|en|thunderstruck}}
+|{{l|en|thunderstone}}
+|{{l|en|thunderstorm}}
+|{{l|en|thundery}}
+}}
 
 ====Translations====
 {{trans-top|sound caused by lightning}}
