--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -246,7 +246,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Portuguese: {{t+|pt|contagem|f}}
 * Quechua: {{t|qu|yupa}}
 * Romanian: {{t+|ro|socoti}}
-* Russian: {{t+|ru|счёт|m}}
+* Russian: {{t+|ru|счёт|m}}, {{t+|ru|подсчёт|m}}
 * Spanish: {{t+|es|cuenta|f}}
 {{trans-bottom}}
 
