--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -64,7 +64,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Afrikaans: {{t+|af|tak}}
 * Albanian: {{t+|sq|degë|f}}
 * Arabic: {{t|ar|فَرْع|m}}
-*: Egyptian Arabic: {{t|arz|فرع|m|tr=farʕ}}, {{t|arz|غصن|m|tr=ḡuṣn}}
+*: Egyptian Arabic: {{t|arz|فرع|m|tr=farʿ}}, {{t|arz|غصن|m|tr=ḡuṣn}}
 * Armenian: {{t+|hy|ճյուղ}}, {{t+|hy|ոստ}}
 *: Old Armenian: {{t|xcl|ճիւղ|sc=Armn}}, {{t|xcl|ոստ|sc=Armn}}, {{t|xcl|կողր|sc=Armn}}
 * Assamese: {{t|as|ঠাল}}, {{t|as|ডাল}}
@@ -323,7 +323,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Tagalog: {{t|tl|sangay}}
 * Telugu: {{t+|te|శాఖ}}
 * Turkish: {{t+|tr|dal}}
-* Ukrainian: {{t+|uk|га́лузь|f|tr=haluz'}}
+* Ukrainian: {{t+|uk|га́лузь|f}}
 * Vietnamese: {{t+|vi|nhánh}}
 * Walloon: {{t+|wa|coxhe|f}}, {{t|wa|brantche|f}}
 * Yiddish: {{t|yi|בראַנזשע|f|sc=Hebr}}
