--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -81,7 +81,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 * Swedish: {{t+|sv|t.ex.}}, {{t+|sv|t ex}}, {{t|sv|tex.}} {{t|sv|t. ex.}} {{qualifier|{{t+|sv|till exempel}}}}, {{t+|sv|exempelvis}}
 * Tagalog: {{t+|tl|halimbawa}}
 * Turkish: {{t+|tr|örneğin}}, {{t+|tr|mesela}}, {{t|tr|örn.}}
-* Ukrainian: {{t|uk|наприклад|tr=napryklad}}
+* Ukrainian: {{t|uk|наприклад}}
 * Vietnamese: {{t|vi|vd.}} {{qualifier|[[ví dụ]]}}
 * Welsh: {{t|cy|e.e.}} {{qualifier|{{t|cy|er enghraifft}}}}
 {{trans-bottom}}
