t+da:[[opdele]] ([[User:So9q/ImprovedEditor.js]]) <branch#54962066>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -403,6 +403,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 {{trans-bottom}}
 
 {{trans-top|to divide into separate parts or subdivisions}}
+* Danish: {{t|da|opdele}}
 * Finnish: {{t+|fi|jakaa}}, {{t+|fi|osittaa}}
 * Galician: {{t+|gl|gallar}}, {{t+|gl|esgallar}}
 {{trans-mid}}
