t+oc:[[Nòva Zelanda]] ([[WT:EDIT|Assisted]]) <New Zealand#54991078>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -135,6 +135,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Norwegian:
 *: Bokmål: {{t+|nb|New Zealand}}, {{t|nb|Ny-Zealand}}
 *: Nynorsk: {{t+|nn|New Zealand}}, {{t|nn|Ny-Zealand}}
+* Occitan: {{t+|oc|Nòva Zelanda|f}}
 * Oriya: {{t|or|ନିଉଜିଲ୍ୟାଣ୍ଡ}}
 * Paiwan: {{t|pwn|Autearua}}
 * Pashto: {{t+|ps|نيوزيلنډ}}, {{t|ps|نویزېلنډ|f|tr=nə́wayzelánḍ}}
