+rhyme [[Rhymes:Danish/end|-end]] <find#55053225>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -351,6 +351,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 
 ===Pronunciation===
 * {{IPA|da|/fend/|[fenˀ]}}
+* {{rhymes|da|end}}
 
 ===Verb===
 {{head|da|verb form}}
