--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -6,7 +6,9 @@
 * {{l|en|stomack}} {{qual|obsolete}}
 
 ===Etymology===
-From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomachus}}, from {{der|en|grc|στόμαχος}}, from {{m|grc|στόμα||mouth}}. Displaced native {{m+|enm|mawe||stomach, maw}} (from {{m+|ang|maga}}), {{m+|ang|bouk|bouk, buc|belly, stomach}} (from {{m+|ang|buc||belly, stomach}}, see {{m|en|bucket}}).
+From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomachus}}, from {{der|en|grc|στόμαχος}}, from {{m|grc|στόμα||mouth}}. 
+
+Displaced native {{m+|enm|mawe||stomach, maw}} (from {{m+|ang|maga}}), {{m+|ang|bouk|bouk, buc|belly, stomach}} (from {{m+|ang|buc||belly, stomach}}, see {{m|en|bucket}}).
 
 ===Pronunciation===
 * {{IPA|en|/ˈstʌmək/}}
