--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -8,7 +8,7 @@
 ===Etymology===
 From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomachus}}, from {{der|en|grc|στόμαχος}}, from {{m|grc|στόμα||mouth}}. 
 
-Displaced native {{m+|enm|mawe||stomach, maw}} (from {{m+|ang|maga}}), {{m+|ang|bouk|bouk, buc|belly, stomach}} (from {{m+|ang|buc||belly, stomach}}, see {{m|en|bucket}}).
+Displaced native {{m+|enm|mawe||stomach, maw}} (from {{m+|ang|maga}}), {{m+|enm|bouk|bouk, buc|belly, stomach}} (from {{m+|ang|buc||belly, stomach}}, see {{m|en|bucket}}).
 
 ===Pronunciation===
 * {{IPA|en|/ˈstʌmək/}}
