/* Alternative forms */ <stomach#55113420>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -3,7 +3,7 @@
 [[File:Illu stomach.jpg|thumb|Stomach (with mucosal surface partly exposed)]]
 
 ===Alternative forms===
-* {{l|en|stomack}} {{qual|obsolete}}
+* {{alter|en|stomack||obsolete}}
 
 ===Etymology===
 From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomachus}}, from {{der|en|grc|στόμαχος}}, from {{m|grc|στόμα||mouth}}. 
