/* Translations */ Added Ancient Greek translation of this word. <straight#55757173>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -238,6 +238,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * French: {{t+|fr|comme il faut}}
 * German: {{t+|de|aufrecht}}, {{t+|de|aufrichtig}}, {{t+|de|offen}}, {{t+|de|ungeschminkt}}, {{t+|de|direkt}}
 * Greek: {{t+|el|ειλικρινής}}
+*: Ancient: {{t|grc|εὐθύς}}
 * Hebrew: {{t|he|יָשִׁיר|m|tr=yashír}}
 * Hungarian: {{t+|hu|egyenes}}, {{t+|hu|őszinte}}
 * Irish: {{t|ga|díreach}}
