removed unnecessary [[ـ]] (U+0640 ARABIC TATWEEL) (via JWB) <come#55874198>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -45,8 +45,8 @@ Cognate to {{cog|en|basis}}, from PIE via Ancient Greek.
 ## To move towards an unstated agent.
 ##: {{ux|en|The butler should '''come''' when called.}}
 # {{lb|en|intransitive}} To [[arrive]].
-#*''' 1667''' Diary of {{w|Samuel Pepys}} (illustrating the [[present historic]])
-#*:Late at night '''comes''' Mr. Hudson, the cooper, my neighbour, and tells me that he '''come''' from Chatham this evening at five o'clock, and saw this afternoon "The Royal James," "Oake," and "London," burnt by the enemy with their fire-ships:
+#* ''' 1667''' Diary of {{w|Samuel Pepys}} (illustrating the [[present historic]])
+#*: Late at night '''comes''' Mr. Hudson, the cooper, my neighbour, and tells me that he '''come''' from Chatham this evening at five o'clock, and saw this afternoon "The Royal James," "Oake," and "London," burnt by the enemy with their fire-ships:
 #* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=5
 |passage=Then '''came''' a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps,{{...}}, and the light of the reflector fell full upon her.}}
@@ -229,7 +229,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Italian: {{t+|it|venire}}
 * Japanese: {{t+|ja|来る|tr=くる, kúru}}, {{t+|ja|いらっしゃる|tr=irassharu}} {{qualifier|honorific}}, {{t|ja|おいでになる|tr=o-ide ni naru}} {{qualifier|honorific}}, {{t|ja|参る|tr=まいる, mairu}} {{qualifier|humble}}
 * Kamta: {{t|rkt|aṣ}}
-* Karakhanid: {{t|xqa|کـَلْماكْ|tr=kelmēk}}
+* Karakhanid: {{t|xqa|کَلْماكْ|tr=kelmēk}}
 * Kazakh: {{t+|kk|келу}}
 * Khakas: {{t|kjh|килерге}}
 * Khmer: {{t+|km|មក|tr=mɔɔk|sc=Khmr}}
