--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -87,7 +87,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Bashkir: {{t|ba|кирбес|sc=Cyrl}}
 * Basque: {{t|eu|adreilu}}
 * Belarusian: {{t|be|цэ́гла|f}}
-* Bengali: {{t+|bn|ইট|tr=iţ}}
+* Bengali: {{t+|bn|ইট}}
 * Breton: {{t+|br|brikenn|f}}
 * Bulgarian: {{t+|bg|ту́хла|f}}
 * Burmese: {{t+|my|အုတ်}}
@@ -346,7 +346,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 {{trans-top|made of brick(s)}}
 * Armenian: {{t+|hy|աղյուսե}}
 * Czech: {{t|cs|cihlový}}
-* Danish: {{t+|da|mursten}}s-
+* Danish: {{t+|da|[[mursten]]s-}}
 * Dutch: {{t+|nl|bakstenen}}
 * Estonian: {{t|et|telliskivi-}}
 * Finnish: {{t+|fi|tiilinen}}
@@ -395,13 +395,13 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Czech: {{t+|cs|zdít}}
 * Greek: {{t+|el|πλινθοδομώ}}
 {{trans-mid}}
-* Macedonian: {{t|mk|ѕида|tr=dzída|sc=Cyrl}}
+* Macedonian: {{t|mk|ѕида}}
 {{trans-bottom}}
 
 {{trans-top|make into brick}}
 * Czech: {{t|cs|bricknout}}
 {{trans-mid}}
-* Dutch: {{t+|nl|tot}} {{t+|nl|bakstenen}} {{t+|nl|bakken}}
+* Dutch: {{t+|nl|[[tot]] [[bakstenen]] [[bakken]]}}
 {{trans-bottom}}
 
 {{trans-top|electronics: to render non-functional}}
