/* Translations */ <United Kingdom#57803515>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -124,7 +124,7 @@
 * Spanish: {{t+|es|Reino Unido|m}}, {{t|es|Reino Unido de Gran Bretaña e Irlanda del Norte|m}}
 * Swahili: {{t|sw|Ufalme wa Muungano}}
 * Swedish: {{t+|sv|Förenade kungariket}}; {{t+|sv|Storbritannien}} {{q|colloquially}}; {{t+|sv|England}} {{q|colloquially}}
-* Tagalog: {{t|tl|Nagkakaisang Kaharian}}
+* Tagalog: {{t|tl|Reyno Unido}}
 * Tajik: {{t+|tg|Подшоҳии Муттаҳида}}
 * Tamil: {{t+|ta|ஐக்கிய இராச்சியம்}}
 * Tatar: {{t|tt|Берләшкән Патшалык}}
