Fixing translation table using ([[User:So9q/Improved-xte.js|assisted]]) <United Kingdom#57815709>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -113,7 +113,7 @@
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Уједињено Краљевство|n|sc=Cyrl}}, {{t|sh|Уједињено Краљевство Велике Британије и Сјеверне Ирске|n|sc=Cyrl}}
 *: Roman: {{t|sh|Ujedinjeno Kraljevstvo|n}}, {{t|sh|Ujedinjeno Kraljevstvo Velike Britanije i Sjeverne Irske|n}}
-* Silesian: {{t|szl|Zjydnoczůne Krůlestwo Wjelgij Brytańije i Irlandyje Půłnocny|n}} {{qualifier|literal translation of the full name}}; {{qualifier|colloquially:}} {{t|szl|Yngland|m}}, {{t|szl|Anglijo|f}}
+* Silesian: {{t|szl|Zjydnoczůne Krůlestwo Wjelgij Brytańije i Irlandyje Půłnocny|n}} {{qualifier|literal translation of the full name}}, {{qualifier|colloquially:}} {{t|szl|Yngland|m}}, {{t|szl|Anglijo|f}}
 * Sinhalese: {{t|si|එක්‍සත් රාජධානිය|sc=Sinh}}
 * Slovak: {{t|sk|Spojené kráľovstvo|n}}, {{t+|sk|Spojené kráľovstvo Veľkej Británie a Severného Írska|n}}
 * Slovene: {{t+|sl|Zdrúženo kraljéstvo|n}}
@@ -123,7 +123,7 @@
 *: Upper Sorbian: {{t|hsb|Zjednoćene kralestwo}}
 * Spanish: {{t+|es|Reino Unido|m}}, {{t|es|Reino Unido de Gran Bretaña e Irlanda del Norte|m}}
 * Swahili: {{t|sw|Ufalme wa Muungano}}
-* Swedish: {{t+|sv|Förenade kungariket}}; {{t+|sv|Storbritannien}} {{q|colloquially}}; {{t+|sv|England}} {{q|colloquially}}
+* Swedish: {{t+|sv|Förenade kungariket}}, {{t+|sv|Storbritannien}} {{q|colloquially}}, {{t+|sv|England}} {{q|colloquially}}
 * Tagalog: {{t|tl|Reyno Unido}}
 * Tajik: {{t+|tg|Подшоҳии Муттаҳида}}
 * Tamil: {{t+|ta|ஐக்கிய இராச்சியம்}}
