--- a/en/坢/坢.13029.wikitext
+++ b/en/坢/坢.13029.wikitext
@@ -9,6 +9,37 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=pǎn
+|m-s=
+|dg=
+|c=pun5,bun6
+|c-t=
+|g=
+|h=pfs=
+|j=
+|mb=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+----
+
 ==Cantonese==
 
 ===Hanzi===
@@ -30,12 +61,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[はん]] (han), [[ばん]] (ban)|kun=[[たひらか]] (tahiraka), [[ちり]] (chiri)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[pǎn]] ([[pan3]])|wg=p'an<sup>3</sup>}}
-
-# {{rfdef|cmn|sort=土05}}
