--- a/en/坢/坢.13029.wikitext
+++ b/en/坢/坢.13029.wikitext
@@ -12,31 +12,44 @@
 ==Chinese==
 {{zh-forms}}
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
 |m=pǎn
-|m-s=
-|dg=
-|c=pun5,bun6
-|c-t=
-|g=
-|h=pfs=
-|j=
-|mb=
-|md=
-|mn=
-|mn-t=
-|w=
-|x=
+|c=pun5
 |mc=y
 |oc=y
 |cat=n
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{lb|zh|dialectal}} [[mountain]] [[slope]]; [[mountainside]]; [[hillside]]
+# {{zh-hg}} {{n-g|Defined in {{w|Guangyun}} and {{w|Jiyun}} as {{zh-l|平坦|[[flat]]; [[level]]}}.}}
+# {{zh-hg}} {{n-g|Defined in {{w|Jiyun}} as {{zh-l|發地|to [[rise]] from [[ground]]; [[porous]] [[soil]]}}.}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=pàn
+|c=bun6
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-hg}} {{n-g|Defined in {{w|Jiyun}} as {{zh-l|坋}}.}}
+
+===Pronunciation 3===
+{{zh-pron
+|m=bàn
+|cat=n
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{lb|zh|dialectal}} [[muck]]; [[manure]]; [[dung]]
 
 ----
 
