--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -394,7 +394,7 @@ Probably {{etyl|fr|en}} {{m|fr|poche}}. See {{m|en|pouch}}.
 ==Albanian==
 
 ===Etymology===
-From {{inh|sq|sqj-pro|*puša}}, from ''*puksja'', from {{der|sq|ine-pro|*pewk-}} 'covered with hair, bushy'. Related to Sanskrit {{m|sa|पुच्छ||tail|tr=púccha}}, Slavic {{m|sla-pro|*puxъ}} 'down'.<ref>{{R:sq:Orel:2000}}, p. 85</ref>.
+From {{inh|sq|sqj-pro|*puša}}, from ''*puksja'', from {{der|sq|ine-pro|*pewk-||covered with hair, bushy}}. Related to {{cog|sa|पुच्छ||tail|tr=púccha}}, {{cog|sla-pro|*puxъ||down}}.<ref>{{R:sq:Orel:2000|page=85}}</ref>
 
 ===Noun===
 {{sq-noun|m|pusha|pushi|pushat}}
