t+kum:[[гесмек]] t+kum:[[туврамакъ]] t+kum:[[тилмек]] ([[WT:EDIT|Assisted]]) <cut#57823204>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -232,6 +232,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Khmer: {{t+|km|កាត់|tr=kat}}
 * Korean: {{t+|ko|끊다}}
 {{trans-mid}}
+* Kumyk: {{t|kum|гесмек}}, {{t|kum|туврамакъ}}, {{t|kum|тилмек}}
 * Lao: {{t|lo|ຕັດ}}
 * Latin: {{t|la|inseco}}, {{t|la|incido}}
 * Latvian: {{t|lv|griezt}}
