--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -34,7 +34,7 @@
 |j=di3
 |mb=dī
 |md=dê
-|mn=xm,qz,tp,lk,km,mg,hc,tc:tōe/ml,kh,tn,yl:tē/lk:tǒe/sx:tēre/tī/xm,zz,tw:tè/qz:tèr
+|mn=xm,qz,tp,lk,km,mg,hc,tc:tōe/ml,kh,tn,yl,ph:tē/lk:tǒe/sx:tēre/tī/xm,zz,tw:tè/qz:tèr
 |mn_note=Xiamen, Quanzhou: tōe - vernacular; tē - literary
 Zhangzhou, Taiwan: tē/tōe/tǒe/tēre - literary
 Other readings: tī - vernacular (may be considered literary, only used in {{zh-l|*土地公}}); tè/tèr - vernacular (limited, e.g. {{zh-l|*到地}}, {{zh-l|*鎮地}}, {{zh-l|*掃地}}, possibly substitute for {{zh-l|帶*}})
