--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -601,6 +601,20 @@ From {{inh|enm|ang|cuma}}, from {{m|ang|cuman||to come}}.
 
 ====References====
 * {{R:MED Online|cǒme|n.(2)|MED8513}}
+
+===Etymology 3===
+
+====Noun====
+{{enm-noun}}
+
+# {{alt form|enm|coumb}}
+
+===Etymology 4===
+
+====Noun====
+{{enm-noun}}
+
+# {{alt form|enm|comb}}
 ----
 
 ==Portuguese==
