--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -146,6 +146,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Kazakh: {{t+|kk|табу|sc=Cyrl}}
 * Khmer: {{t|km|រកឃើញ|tr=rɔɔk kʰəəñ|sc=Khmr}}
 * Korean: {{t+|ko|찾다}}
+* Kumyk: {{t|kum|тапмакъ}}
 * Kurdish:
 *: Sorani: {{t|ckb|دیتنه‌وه‌|sc=ku-Arab}}, {{t|ckb|دۆزینه‌وه‌|sc=ku-Arab}}
 {{trans-mid}}
